Try to restore CVS daemon status after SDCard is mounted. Use Environment.getExternalStorageDirectory() instead of hard code "/sdcard".

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,6 +48,14 @@
                 </action>
             </intent-filter>
         </service>
+
+        <receiver android:name=".MediaReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_MOUNTED" />
+
+                <data android:scheme="file" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
